--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "mongodb": "4.1",
     "mongoose": "^6.6.1",
     "mongoose-encryption": "^2.1.2",
     "mongoose-findorcreate": "^3.0.0",
